# Career-Copilot

agent-backend/: main.py  pyproject.toml
agent-backend/database/: mcp_config.py  mcp_connector.py
extraction-jobrun/: .dockerignore  .gitignore  Dockerfile  agent.py  create_tables_db.py  db_class.py  main.py  mcp_connector.py  pyproject.toml  test_lambda.py
