[project]
name = "extraction-jobrun"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.53",
    "mcp>=1.28.1",
    "openai>=2.46.0",
    "pgvector>=0.5.0",
    "psycopg2-binary>=2.9.12",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
]
